<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_arriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_abajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="29dp"
        android:text="@string/tv_resultadoAbajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="9dp"
        android:text="@string/mas"
        app:layout_constraintBottom_toTopOf="@+id/btnMenos"
        app:layout_constraintEnd_toStartOf="@+id/btnNueve"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nueve"
        app:layout_constraintBottom_toTopOf="@+id/btnSeis"
        app:layout_constraintStart_toEndOf="@+id/btnMas" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="3dp"
        android:text="@string/ocho"
        app:layout_constraintBottom_toTopOf="@+id/btnCinco"
        app:layout_constraintStart_toEndOf="@+id/btnNueve" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="7dp"
        android:text="@string/siete"
        app:layout_constraintBottom_toTopOf="@+id/btnCuatro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOcho" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="9dp"
        android:text="@string/menos"
        app:layout_constraintBottom_toTopOf="@+id/btnTres"
        app:layout_constraintEnd_toStartOf="@+id/btnSeis"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="12dp"
        android:text="@string/seis"
        app:layout_constraintBottom_toTopOf="@+id/btnTres"
        app:layout_constraintStart_toEndOf="@+id/btnMenos" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="13dp"
        android:text="@string/cinco"
        app:layout_constraintBottom_toTopOf="@+id/btnDos"
        app:layout_constraintStart_toEndOf="@+id/btnSeis" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:text="@string/cuatro"
        app:layout_constraintBottom_toTopOf="@+id/btnUno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="13dp"
        android:text="@string/multiplicacion"
        app:layout_constraintBottom_toTopOf="@+id/btnDivision"
        app:layout_constraintEnd_toStartOf="@+id/btnTres"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tres"
        app:layout_constraintBottom_toTopOf="@+id/btnBorrar"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicacion" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="18dp"
        android:text="@string/dos"
        app:layout_constraintBottom_toTopOf="@+id/btnResult"
        app:layout_constraintStart_toEndOf="@+id/btnTres" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="19dp"
        android:text="@string/uno"
        app:layout_constraintBottom_toTopOf="@+id/btnCero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDos" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="188dp"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="187dp"
        android:text="@string/borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnResult"
        app:layout_constraintStart_toEndOf="@+id/btnDivision" />

    <Button
        android:id="@+id/btnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="187dp"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCero" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="188dp"
        android:text="@string/cero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>